--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.4"
+    "astro": "^5.9.4",
+    "peertube-plugin-creative-commons": "^1.2.0"
   }
 }
