--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@cspell/dict-en-common-misspellings": "^2.1.1",
     "astro": "^5.9.4",
     "peertube-plugin-creative-commons": "^1.2.0"
   }
